update endpoint because projectmanagers don't have a clue what they want
