# routes/api/v2/division.js
@@ -44,13 +44,24 @@ class DivisionApi{
         let data = await dataService.getSchedules({league:league,season:season,competition:division});
 
         let ret = data.map(m => {
-          let homeTeam = m.opponents[0].team.name;
+          let match_uuid = m.match_uuid;
+          let homeCoachId = m.opponents[0].coach.id;
+          let homeCoachName = m.opponents[0].coach.name;
+          let homeTeamId = m.opponents[0].team.id;
+          let homeTeamName = m.opponents[0].team.name;
+          let homeTeamRace = m.opponents[0].team.race;
           let homeScore = m.opponents[0].team.score;
-          let awayTeam = m.opponents[1].team.name;
+          let awayCoachId = m.opponents[1].coach.id;
+          let awayCoachName = m.opponents[1].coach.name;
+          let awayTeamId = m.opponents[1].team.id;
+          let awayTeamName = m.opponents[1].team.name;
+          let awayTeamRace = m.opponents[1].team.race;
           let awayScore = m.opponents[1].team.score;
           let round = m.round;
 
-          return {round,homeTeam,homeScore,awayScore,awayTeam};
+          return {round, match_uuid, 
+            homeCoachId, homeCoachName, homeTeamId, homeTeamName, homeTeamRace, homeScore, 
+            awayCoachId, awayCoachName, awayTeamId, awayTeamName, awayTeamRace, awayScore };
         })
 
         res.json(ret.sort((a,b)=> a.round > b.round ? 1 : -1));
